@@ -17,6 +17,7 @@ enum {
     TAG_FLAG_USED   = 0x02, // the opposite of empty
 };
 
+enum class DirectionLevel;
 class Client;
 class Completion;
 class FrameLeaf;
@@ -68,9 +69,9 @@ public:
     void removeClientSlice(Client* client);
 
     void focusInDirCommand(CallOrComplete invoc);
-    int focusInDir(Direction direction, bool external_only, Output output);
+    int focusInDir(Direction direction, DirectionLevel depth, Output output);
     void shiftInDirCommand(CallOrComplete invoc);
-    int shiftInDir(Direction direction, bool external_only, Output output);
+    int shiftInDir(Direction direction, DirectionLevel depth, Output output);
 
     void cycleAllCommand(CallOrComplete invoc);
     void cycleAll(bool forward, bool skip_invisible);
