@@ -9,6 +9,9 @@ Current git version
 
   * Tabbed window titles in the 'max' layout algorithm (controllable via the
     'tabbed_max' setting)
+  * Directionally moving through a max layout is possible via focus / shift by
+    adding '--level=tabbed' (only for 'tabbed_max') or '--level=any' (any 'max'
+    layout).
   * New decoration setting 'title_when' to control, when window titles and tabs
     are shown.
   * New decoration settings 'title_depth' and 'title_align'.
